[project]
name = "podcastie_core"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jieggii", email = "jieggii@protonmail.com"},
]
dependencies = [
    "podcastie-database @ file:///${PROJECT_ROOT}/../podcastie_database",
    "podcastie-rss @ file:///${PROJECT_ROOT}/../podcastie_rss",
    "beanie>=1.26.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
fmt.shell = "isort ./podcastie_core && black ./podcastie_core"

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
]
[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
