[project]
name = "feed_poller"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jieggii", email = "jieggii@protonmail.com"},
]
dependencies = [
    "loguru>=0.7.2",
    "podcastie-database @ file:///${PROJECT_ROOT}/../../lib/podcastie_database",
    "podcastie-rss @ file:///${PROJECT_ROOT}/../../lib/podcastie_rss",
    "aiogram>=3.7.0",
    "aiohttp>=3.9.5",
    "betterconf>=2.6.1",
    "pydub>=0.25.1",
    "structlog>=24.2.0",
    "podcastie-telegram-html @ file:///${PROJECT_ROOT}/../../lib/podcastie_telegram_html",
    "podcastie-service-config @ file:///${PROJECT_ROOT}/../../lib/podcastie_service_config",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "python-dotenv[cli]>=1.0.1",
    "isort>=5.13.2",
    "black>=24.4.2",
]

[tool.pdm.scripts]
fmt.shell = "isort ./feed_poller && black ./feed_poller"
start = "dotenv -f .env run python -m feed_poller"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120